# voxel

./: .gitignore  CMakeLists.txt  Makefile  README.md  resources.xml  x86_64-pc-linux-gnu.cmake
res/: voxel.icns  voxel.rc
src/: application.c  application.h  b_tree.c  b_tree.h  block.c  block.h  box.c  box.h  bp_tree.c  bp_tree.h  camera.c  camera.h  chunk.c  chunk.h  chunk_dao.c  chunk_dao.h  cursor.c  cursor.h  fps_panel.c  fps_panel.h  global.c  global.h  ground.c  ground.h  heap.c  heap.h  instructions_panel.c  instructions_panel.h  keyboard.c  keyboard.h  linked_list.c  linked_list.h  main.c  matrix.c  matrix.h  mesh.c  mesh.h  mouse.c  mouse.h  panel.c  (+19 more)
src/commands/: world_clear_region_command.c  world_clear_region_command.h  world_copy_chunk_command.c  world_copy_chunk_command.h  world_cut_chunk_command.c  world_cut_chunk_command.h  world_set_region_command.c  world_set_region_command.h
src/internal/: block.h  bp_tree.h  chunk.h  fps_panel.h  heap.h  instructions_panel.h  linked_list.h  mesh.h  panel.h  picker.h  picker_panel.h  renderer.h  shader.h  voxel.h  window.h  world.h
src/shaders/: 2D.frag  2D.frag.glsl  2D.vert  2D.vert.glsl  2D.vert.spv  3D.frag  3D.frag.glsl  3D.frag.spv  3D.vert  3D.vert.spv
src/shaders/glsl/120/: 2D.frag.glsl  2D.vert.glsl  3D.frag.glsl  3D.vert.glsl
src/shaders/glsl/300/: 2D.frag.glsl  3D.vert.glsl
src/shaders/glsl/450/: 2D.frag.glsl
src/shaders/spir-v/: 2D.frag.spv  3D.frag.spv  3D.vert.spv
